fix line-overflow bug

--- a/css/caret.css
+++ b/css/caret.css
@@ -2,7 +2,7 @@
   position: absolute;
   height: 2.6vh;
   left: 1px;
-  border-right: 1px solid black;
+  border-right: 1px solid white;
 
   transition: 0.07s;
   z-index: 3;
