--- a/css/index.css
+++ b/css/index.css
@@ -11,9 +11,7 @@ body {
   top: 0px;
   left: 0px;
   width: calc(100% - 10px);
-  min-height: 2vh;
   height: 2vh;
-  max-height: 2vh;
   
   font-size: 2vh;
   padding: 2px 5px;
@@ -22,11 +20,16 @@ body {
 .line .linenum {
   display: inline-block;
   min-height: 2vh;
+  text-align: center;
+  vertical-align: middle;
 }
 .line .code {
+  position: absolute;
+  top: 0px;
   display: inline-block;
-  margin: 0px 5px;
+  margin: 1px 5px;
   min-height: 2vh;
+  z-index: 0;
 }
 
 .character {
@@ -36,15 +39,3 @@ body {
   margin: 0;
 }
 
-.keyword {
-  color: blue;
-  display: inline-block;
-}
-.value {
-  color: red;
-  display: inline-block;
-}
-.comment {
-  color: green;
-  display: inline-block;
-}
